--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #222222;
+      background-color: #222222x;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #000000;
     }
@@ -17,7 +17,7 @@
       width: 700px;
     }
     h1 { font-size: 3.8em; color: #61003d; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
+    h1 .small { font-size: 0.2em; }
     h1 a { text-decoration: none }
     h2 { font-size: 1.5em; color: #61003d; }
     h3 { text-align: center; color: #61003d; }
@@ -42,7 +42,7 @@
         <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="https://github.com/xorg62/wmfs">wmfs</a>
+    <h1><a href="https://github.com/xorg62/wmfs">WMFS²</a>
       <span class="small">by <a href="https://github.com/xorg62">xorg62</a></span></h1>
 
     <div class="description">
