--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #222222x;
+      background-color: #222222;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #000000;
     }
