--- a/index.html
+++ b/index.html
@@ -1,88 +1,60 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
 <head>
-  <meta charset='utf-8'>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+	<link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
 
-  <title>xorg62/wmfs @ GitHub</title>
+<!-- Page Title -->
+	<title>WMFS - Window Manager From Scratch</title>
 
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #444444;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #61003d; margin-bottom: 3px; }
-    h1 .small { font-size: 0.2em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #61003d; }
-    h3 { text-align: center; color: #61003d; }
-    a { color: #61003d; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
 </head>
-
 <body>
-  <a href="https://github.com/xorg62/wmfs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
-  <div id="container">
-
-    <div class="download">
-      <a href="https://github.com/xorg62/wmfs/zipball/master">
-        <img border="0" width="90" src="https://github.com/images/modules/download/zip.png"></a>
-      <a href="https://github.com/xorg62/wmfs/tarball/master">
-        <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1><a href="https://github.com/xorg62/wmfs">WMFS²</a>
-      <span class="small">by <a href="https://github.com/xorg62">xorg62</a></span></h1>
-
-    <div class="description">
-      Window Manager From Scratch, A tiling window manager highly configurable.
-    </div>
-
-
-
-
-
-
-
-
-
-
-      <h2>Authors</h2>
-      <p>arnault (contact@arpinux.org)<br/>David Delassus (david.jose.delassus@gmail.com)<br/>Paul Fariello (fariello@archos.com)<br/>Hobbestigrou (hobbestigrou@erakis.im)<br/>Philippe Pepiot (phil@philpep.org)<br/>m-r-r (raybaudroigm@gmail.com)<br/>Martin Duquesnoy (xorg62@gmail.com)<br/>      </p>
-
-
-
-      <h2>Contact</h2>
-      <p>Martin Duquesnoy (xorg62@gmail.com)<br/>      </p>
-
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="https://github.com/xorg62/wmfs/zipball/master">zip</a> or
-      <a href="https://github.com/xorg62/wmfs/tarball/master">tar formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/xorg62/wmfs</pre>
-    </p>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="https://github.com/xorg62/wmfs">xorg62/wmfs</a>
-    </div>
-
-  </div>
-
+    <div id="container">
+        <div id="header">
+            <h1><span>window manager from scratch by <a href="https://github.com/xorg62" title ="who is...">xorg62</a></span><a href="https://github.com/xorg62/wmfs" title="back to github">WMFS2</a></h1>
+            <h2><a href="https://github.com/xorg62/wmfs/wiki">wiki</a> | <a href="https://github.com/xorg62/wmfs/downloads">downloads</a> | <a href="mailto:xorg62@gmail.com">contact</a></h2>
+        </div>
+        <div id="links">
+            <div class="categorie">
+                <img src="images/logo-snap.png" alt="wmfs2"/>
+                <div class="slider-wrapper theme-default">
+                    <div id="slider" class="nivoSlider">
+                    <a href="shots/wmfs2_shots_01.png"><img src="images/wmfs2_thmb_01.png" alt=""/></a>
+                    <a href="shots/wmfs2_shots_02.png"><img src="images/wmfs2_thmb_01.png" alt=""/></a>
+                    <a href="shots/wmfs2_shots_03.png"><img src="images/wmfs2_thmb_03.png" alt=""/></a>
+                    <a href="shots/wmfs2_shots_04.png"><img src="images/wmfs2_thmb_04.png" alt=""/></a>
+                    <a href="shots/wmfs2_shots_05.png"><img src="images/wmfs2_thmb_05.png" alt=""/></a>
+                    <a href="shots/wmfs2_shots_06.png"><img src="images/wmfs2_thmb_06.png" alt=""/></a>
+                    <a href="shots/wmfs2_shots_07.png"><img src="images/wmfs2_thmb_07.png" alt=""/></a>
+                    <a href="shots/wmfs2_shots_08.png"><img src="images/wmfs2_thmb_08.png" alt=""/></a>
+                    <a href="shots/wmfs2_shots_09.png"><img src="images/wmfs2_thmb_09.png" alt=""/></a>
+                    <a href="shots/wmfs2_shots_10.png"><img src="images/wmfs2_thmb_10.png" alt=""/></a>
+                    </div>
+                </div>
+                <script type="text/javascript" src="scripts/jquery-1.7.1.min.js"></script>
+                <script type="text/javascript" src="scripts/jquery.nivo.slider.pack.js"></script>
+                <script type="text/javascript">
+                $(window).load(function() {
+                    $('#slider').nivoSlider({
+                        effect: 'fade',
+                        pauseTime: 5000,
+                        controlNav: false,
+                        randomStart: true
+                        });
+                    });
+                </script>
+            </div>
+		</div>
+        <div id="footer">
+			<p>WMFS2 is a lightweight and highly configurable tiling window manager for X written in C. wmfs2 is a free software distributed under the BSD license.</p>
+            <p>live support can be found on irc channel #wmfs on freenode</p>
+            <p>- - -</p>
+            <p>theme by arpinux inspired by <a href="http://wiscot.deviantart.com">wiscot</a> :: slider by <a href="license.txt">dev7</a> :: arpinux 2012 :: license <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">cc BY-NC-SA</a> :: <a href="http://validator.w3.org/check/referer" title="Valid XHTML 1.0">XHTML</a> :: <!--a href="http://jigsaw.w3.org/css-validator/check/referer?profile=css3" title="Valid CSS">CSS</a--></p>
+        </div>
+	</div>
 </body>
 </html>
+
+<!-- cc BY-NC-SA License :: arpinux :: 2012 :: http://arpinux.org -->
