add content to homepage

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
         <div id="links">
             <div class="categorie">
                 <img src="images/logo-snap.png" alt="wmfs2"/>
+                <h2> - what ?</h2>
+                <p>WMFS2 is a lightweight and highly configurable tiling window manager for X written in C. wmfs2 is a free software distributed under the <a href="http://en.wikipedia.org/wiki/BSD_licenses">BSD license</a>. it can be drive from keyboard or mouse and it's configuration stands in one text file easily understandable</p>
+                <h2> - where ?</h2>
+                <p>You can download this project in either <a href="https://github.com/xorg62/wmfs/zipball/master">zip or tar</a> formats.<br />
+                You can also clone the project with <a href="http://git-scm.com">Git</a> by running: <pre>$ git clone git://github.com/xorg62/wmfs</pre></p>
+                <h2> - look</h2>
+                <p>wmfs2 supports themable statusbars and clients</p>
                 <div class="slider-wrapper theme-default">
                     <div id="slider" class="nivoSlider">
                     <a href="shots/wmfs2_shots_01.png"><img src="images/wmfs2_thmb_01.png" alt=""/></a>
@@ -32,6 +39,14 @@
                     <a href="shots/wmfs2_shots_09.png"><img src="images/wmfs2_thmb_09.png" alt=""/></a>
                     <a href="shots/wmfs2_shots_10.png"><img src="images/wmfs2_thmb_10.png" alt=""/></a>
                     </div>
+                <h2> - authors</h2>
+                <p>Martin Duquesnoy (xorg62@gmail.com)<br />
+                David Delassus (david.jose.delassus@gmail.com)<br />
+                Paul Fariello (fariello@archos.com)<br />
+                Hobbestigrou (hobbestigrou@erakis.im)<br />
+                Philippe Pepiot (phil@philpep.org)<br />
+                m-r-r (raybaudroigm@gmail.com)<br />
+                arnault (contact@arpinux.org)</p>
                 </div>
                 <script type="text/javascript" src="scripts/jquery-1.7.1.min.js"></script>
                 <script type="text/javascript" src="scripts/jquery.nivo.slider.pack.js"></script>
@@ -48,7 +63,6 @@
             </div>
 		</div>
         <div id="footer">
-			<p>WMFS2 is a lightweight and highly configurable tiling window manager for X written in C. wmfs2 is a free software distributed under the BSD license.</p>
             <p>live support can be found on irc channel #wmfs on freenode</p>
             <p>- - -</p>
             <p>theme by arpinux inspired by <a href="http://wiscot.deviantart.com">wiscot</a> :: slider by <a href="license.txt">dev7</a> :: arpinux 2012 :: license <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">cc BY-NC-SA</a> :: <a href="http://validator.w3.org/check/referer" title="Valid XHTML 1.0">XHTML</a> :: <!--a href="http://jigsaw.w3.org/css-validator/check/referer?profile=css3" title="Valid CSS">CSS</a--></p>
