--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="container">
         <div id="header">
             <h1><span>window manager from scratch by <a href="https://github.com/xorg62" title ="who is...">xorg62</a></span><a href="https://github.com/xorg62/wmfs" title="back to github">WMFS2</a></h1>
-            <h2><a href="https://github.com/xorg62/wmfs/wiki">wiki</a> | <a href="https://github.com/xorg62/wmfs/downloads">downloads</a> | <a href="mailto:xorg62@gmail.com">contact</a></h2>
+            <h2><a href="https://github.com/xorg62/wmfs/wiki">wiki</a> | <a href="https://github.com/xorg62/wmfs/zipball/master">download</a> | <a href="mailto:xorg62@gmail.com">contact</a></h2>
         </div>
         <div id="links">
             <div class="categorie">
@@ -22,8 +22,7 @@
                 <h2> - what ?</h2>
                 <p>WMFS2 is a lightweight and highly configurable tiling window manager for X written in C. wmfs2 is a free software distributed under the <a href="http://en.wikipedia.org/wiki/BSD_licenses">BSD license</a>. it can be drive from keyboard or mouse and it's configuration stands in one text file easily understandable</p>
                 <h2> - where ?</h2>
-                <p>You can download this project in <a href="https://github.com/xorg62/wmfs/zipball/master">zip</a> format.<br />
-                You can also clone the project with <a href="http://git-scm.com">Git</a> by running: <pre>$ git clone git://github.com/xorg62/wmfs</pre></p>
+                <p>You can download this project in <a href="https://github.com/xorg62/wmfs/zipball/master">zip</a> format. You can also clone the project with <a href="http://git-scm.com">Git</a> by running: <pre>$ git clone git://github.com/xorg62/wmfs</pre></p>
                 <h2> - look</h2>
                 <p>wmfs2 supports themable statusbars and clients</p>
                 <div class="slider-wrapper theme-default">
@@ -39,6 +38,9 @@
                     <a href="shots/wmfs2_shots_09.png"><img src="images/wmfs2_thmb_09.png" alt=""/></a>
                     <a href="shots/wmfs2_shots_10.png"><img src="images/wmfs2_thmb_10.png" alt=""/></a>
                     </div>
+                <h2> - support</h2>
+                <a href="https://github.com/xorg62/wmfs/wiki">the wiki</a> is a good place to find answers to common questions.<br/>
+                need more help ? the best way to get direct support is to join our IRC channel, <b>#wmfs at irc.freenode.org</b>.
                 <h2> - authors</h2>
                 <p>Martin Duquesnoy (xorg62@gmail.com)<br />
                 David Delassus (david.jose.delassus@gmail.com)<br />
@@ -63,9 +65,7 @@
             </div>
 		</div>
         <div id="footer">
-            <p>live support can be found on irc channel #wmfs on freenode</p>
-            <p>- - -</p>
-            <p>theme by arpinux inspired by <a href="http://wiscot.deviantart.com">wiscot</a> :: slider by <a href="license.txt">dev7</a> :: arpinux 2012 :: license <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">cc BY-NC-SA</a> :: <a href="http://validator.w3.org/check/referer" title="Valid XHTML 1.0">XHTML</a> :: <!--a href="http://jigsaw.w3.org/css-validator/check/referer?profile=css3" title="Valid CSS">CSS</a--></p>
+            <p>:: theme by <a href="http://arpinux.org">arpinux</a> inspired by <a href="http://wiscot.deviantart.com">wiscot</a> :: slider by <a href="license.txt">dev7</a> :: arpinux 2012 :: license <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">cc BY-NC-SA</a> :: <a href="http://validator.w3.org/check/referer" title="Valid XHTML 1.0">XHTML</a> :: <!--a href="http://jigsaw.w3.org/css-validator/check/referer?profile=css3" title="Valid CSS">CSS</a--></p>
         </div>
 	</div>
 </body>
