--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="container">
         <div id="header">
             <h1><span>window manager from scratch by <a href="https://github.com/xorg62" title ="who is...">xorg62</a></span><a href="https://github.com/xorg62/wmfs" title="back to github">WMFS2</a></h1>
-            <h2><a href="https://github.com/xorg62/wmfs/wiki">wiki</a> | <a href="https://github.com/xorg62/wmfs/zipball/master">download</a> | <a href="mailto:xorg62@gmail.com">contact</a></h2>
+            <h2><a href="https://github.com/xorg62/wmfs/wiki">wiki</a> | <a href="https://github.com/xorg62/wmfs/tarball/master">download</a> | <a href="mailto:xorg62@gmail.com">contact</a></h2>
         </div>
         <div id="links">
             <div class="categorie">
@@ -22,7 +22,7 @@
                 <h2> - what ?</h2>
                 <p>WMFS2 is a lightweight and highly configurable tiling window manager for X written in C. wmfs2 is a free software distributed under the <a href="http://en.wikipedia.org/wiki/BSD_licenses">BSD license</a>. it can be drive from keyboard or mouse and it's configuration stands in one text file easily understandable</p>
                 <h2> - where ?</h2>
-                <p>You can download this project in <a href="https://github.com/xorg62/wmfs/zipball/master">zip</a> format. You can also clone the project with <a href="http://git-scm.com">Git</a> by running: <pre>$ git clone git://github.com/xorg62/wmfs</pre></p>
+                <p>You can download this project either in <a href="https://github.com/xorg62/wmfs/zipball/master">zip</a> or <a href="https://github.com/xorg62/wmfs/tarball/master">tar</a> formats. You can also clone the project with <a href="http://git-scm.com">Git</a> by running: <pre>$ git clone git://github.com/xorg62/wmfs</pre></p>
                 <h2> - look</h2>
                 <p>wmfs2 supports themable statusbars and clients</p>
                 <div class="slider-wrapper theme-default">
