add 6pi in authors

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 Hobbestigrou (hobbestigrou@erakis.im)<br />
                 Philippe Pepiot (phil@philpep.org)<br />
                 m-r-r (raybaudroigm@gmail.com)<br />
+                6pi (c.sipieter@gmail.com)<br />
                 arnault (contact@arpinux.org)</p>
                 </div>
                 <script type="text/javascript" src="scripts/jquery-1.7.1.min.js"></script>
