--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div id="links">
             <div class="categorie">
-                <img src="images/logo-snap.png" alt="wmfs2"/>
+                <img src="images/logo-snap2.png" alt="wmfs2"/>
                 <h2> - what ?</h2>
                 <p>WMFS2 is a lightweight and highly configurable tiling window manager for X written in C. wmfs2 is a free software distributed under the <a href="http://en.wikipedia.org/wiki/BSD_licenses">BSD license</a>. it can be drive from keyboard or mouse and it's configuration stands in one text file easily understandable</p>
                 <h2> - where ?</h2>
