--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div id="container">
         <div id="header">
-            <h1><span>window manager from scratch by <a href="https://github.com/xorg62" title ="who is...">xorg62</a></span><a href="https://github.com/xorg62/wmfs" title="back to github">WMFS2</a></h1>
-            <h2><a href="https://github.com/xorg62/wmfs/wiki">wiki</a> | <a href="https://github.com/xorg62/wmfs/tarball/master">download</a> | <a href="mailto:xorg62@gmail.com">contact</a></h2>
+            <h1><span>window manager from scratch by <a href="https://github.com/xorg62" title ="who is...">xorg62</a></span><a href="https://github.com/xorg62/wmfs" title="go to github">WMFS2</a></h1>
+            <h2><a href="htpps://github.com/xorg62/wmfs">git</a> | <a href="https://github.com/xorg62/wmfs/wiki">wiki</a> | <a href="https://github.com/xorg62/wmfs/tarball/master">download</a> | <a href="mailto:xorg62@gmail.com">contact</a></h2>
         </div>
         <div id="links">
             <div class="categorie">
