fix link and add titles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="container">
         <div id="header">
             <h1><span>window manager from scratch by <a href="https://github.com/xorg62" title ="who is...">xorg62</a></span><a href="https://github.com/xorg62/wmfs" title="go to github">WMFS2</a></h1>
-            <h2><a href="htpps://github.com/xorg62/wmfs">git</a> | <a href="https://github.com/xorg62/wmfs/wiki">wiki</a> | <a href="https://github.com/xorg62/wmfs/tarball/master">download</a> | <a href="mailto:xorg62@gmail.com">contact</a></h2>
+            <h2><a href="https://github.com/xorg62/wmfs" title="go to git repository">git</a> | <a href="https://github.com/xorg62/wmfs/wiki" title="visit wmfs wiki eng/fr">wiki</a> | <a href="https://github.com/xorg62/wmfs/tarball/master" title="download wmfs as tgz">download</a> | <a href="mailto:xorg62@gmail.com" title="mail to xorg62">contact</a></h2>
         </div>
         <div id="links">
             <div class="categorie">
