test basic favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<link rel="stylesheet" href="style.css" type="text/css" />
-    <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="Shortcut Icon" href="favicon-basic.ico" type="image/x-icon" />
 
 <!-- Page Title -->
 	<title>WMFS - Window Manager From Scratch</title>
