add irc link in support section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                 <h2> - support</h2>
                 <a href="https://github.com/xorg62/wmfs/wiki">the wiki</a> is a good place to find answers to common questions.<br/>
-                need more help ? the best way to get direct support is to join our IRC channel, <b>#wmfs at irc.freenode.org</b>.
+                need more help ? the best way to get direct support is to join our IRC channel, <a href="irc.html" title="wmfs on freenode">#wmfs on freenode</a>.
                 <h2> - authors</h2>
                 <p>Martin Duquesnoy (xorg62@gmail.com)<br />
                 David Delassus (david.jose.delassus@gmail.com)<br />
