add kidanger in authors section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 Philippe Pepiot (phil@philpep.org)<br />
                 m-r-r (raybaudroigm@gmail.com)<br />
                 6pi (c.sipieter@gmail.com)<br />
+                Jeremy Anger (angerj.dev@gmail.com)<br />
                 arnault (contact@arpinux.org)</p>
                 </div>
                 <script type="text/javascript" src="scripts/jquery-1.7.1.min.js"></script>
