Added MicroJoe in authors section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 m-r-r (raybaudroigm@gmail.com)<br />
                 6pi (c.sipieter@gmail.com)<br />
                 Jeremy Anger (angerj.dev@gmail.com)<br />
-                arnault (contact@arpinux.org)</p>
+                arnault (contact@arpinux.org)<br />
+                Romain Porte (microjoe@mailoo.org)</p>
                 </div>
                 <script type="text/javascript" src="scripts/jquery-1.7.1.min.js"></script>
                 <script type="text/javascript" src="scripts/jquery.nivo.slider.pack.js"></script>
